--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,4 +27,12 @@ body { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-or
 body { font-family: "Roboto Regular"; font-size: 1rem; color: #fff; font-weight: 400; line-height: 1rem; }
 
 section { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100vw; height: 85vh; }
+
+aside { width: 15%; height: 100%; border: solid 1px #fff; padding: 15px 10px; overflow-y: auto; }
+
+aside::-webkit-scrollbar { width: 15px; }
+
+aside::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 100px; }
+
+aside::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); background-color: #818181; border: 3px solid #e4e4e4; border-radius: 100px; }
 /*# sourceMappingURL=style.css.map */
