--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,4 +35,6 @@ aside::-webkit-scrollbar { width: 15px; }
 aside::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 100px; }
 
 aside::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); background-color: #818181; border: 3px solid #e4e4e4; border-radius: 100px; }
+
+.container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; max-width: 70%; height: 100%; padding: 0; border: solid 1px #fff; }
 /*# sourceMappingURL=style.css.map */
