--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,4 +47,6 @@ main::-webkit-scrollbar { width: 15px; }
 main::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 100px; }
 
 main::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); background-color: #818181; border: 3px solid #e4e4e4; border-radius: 100px; }
+
+footer { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100vw; height: 15vh; border: solid 1px #fff; }
 /*# sourceMappingURL=style.css.map */
