footer/navbar got fixed height

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,6 +1,7 @@
 footer{
     @include flex(center,center);
     width: 100vw;
-    height: 15vh;
+    height: 100px;
+    background-color: $color-primary;
     border: solid 1px $color-secondary;
 }
