--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,9 @@ body { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-or
 /*=== Typography Styling ===*/
 body { font-family: "Roboto Regular"; font-size: 1rem; color: #fff; font-weight: 400; line-height: 1rem; }
 
-section { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100vw; height: 85vh; }
+section { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100vw; height: calc(100vh - 101px); }
 
-aside { width: 15%; height: 100%; border: solid 1px #fff; padding: 15px 10px; overflow-y: auto; }
+aside { width: 25%; min-width: 250px; height: 100%; border: solid 1px #fff; padding: 15px 10px; overflow-y: auto; }
 
 aside::-webkit-scrollbar { width: 15px; }
 
@@ -36,11 +36,11 @@ aside::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 100px
 
 aside::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); background-color: #818181; border: 3px solid #e4e4e4; border-radius: 100px; }
 
-.container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; max-width: 70%; height: 100%; padding: 0; border: solid 1px #fff; }
+.container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; padding: 0; border: solid 1px #fff; }
 
-nav { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100%; height: 15%; border: solid 1px #fff; }
+nav { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100%; min-height: 80px; border: solid 1px #fff; }
 
-main { width: 100%; height: 85%; border: solid 1px #fff; padding: 15px 10px; overflow-y: auto; }
+main { width: 100%; height: 100%; border: solid 1px #fff; padding: 15px 10px; overflow-y: auto; }
 
 main::-webkit-scrollbar { width: 15px; }
 
@@ -48,5 +48,5 @@ main::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 100px;
 
 main::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); background-color: #818181; border: 3px solid #e4e4e4; border-radius: 100px; }
 
-footer { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100vw; height: 15vh; border: solid 1px #fff; }
+footer { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100vw; height: 100px; background-color: #000; border: solid 1px #fff; }
 /*# sourceMappingURL=style.css.map */
