--- a/assets/sass/layout/_aside.scss
+++ b/assets/sass/layout/_aside.scss
@@ -1,5 +1,6 @@
 aside{
-    width: 15%;
+    width: 25%;
+    min-width:250px;
     height:100%;
     border: solid 1px $color-secondary;
     padding: 15px 10px;
