--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -1,6 +1,6 @@
 nav{
     @include flex(center,center);
     width: 100%;
-    height: 15%;
+    min-height:80px;
     border: solid 1px $color-secondary;
 }
