--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,11 @@ body { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-or
 @font-face { font-family: "Didact Gothic Bold"; src: url("../fonts/Didact Gothic/Didact Gothic-Bold.ttf") format("truetype"); }
 
 /*=== Typography Styling ===*/
-body { font-family: "Roboto Regular"; font-size: 1rem; color: #fff; font-weight: 400; line-height: 1rem; }
+body { font-family: "Roboto Regular"; font-size: 1rem; color: #fff; font-weight: 400; line-height: 1.3rem; }
 
 section { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100vw; height: calc(100vh - 101px); }
 
-aside { width: 25%; min-width: 250px; height: 100%; border: solid 1px #fff; padding: 15px 10px; overflow-y: auto; }
+aside { width: 20%; min-width: 250px; height: calc(100vh - 101px); border: solid 1px #fff; padding: 15px 10px; overflow-y: auto; }
 
 aside::-webkit-scrollbar { width: 15px; }
 
@@ -36,7 +36,16 @@ aside::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 100px
 
 aside::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); background-color: #818181; border: 3px solid #e4e4e4; border-radius: 100px; }
 
-.container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; padding: 0; border: solid 1px #fff; }
+@media (max-width: 1024px) { .right-sidebar { position: fixed; right: -300px; } }
+
+@media (max-width: 700px) { .left-sidebar { position: fixed; left: -200px; }
+  .left-sidebar article { display: none; }
+  .container { padding-left: 49px; }
+  .left-sidebar:hover { position: fixed; left: 0px; background-color: #000; }
+  .left-sidebar:hover article { display: block; }
+  .left-sidebar:hover .container { padding-left: 0px; } }
+
+.container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; border: solid 1px #fff; }
 
 nav { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100%; min-height: 80px; border: solid 1px #fff; }
 
@@ -48,5 +57,5 @@ main::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 100px;
 
 main::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); background-color: #818181; border: 3px solid #e4e4e4; border-radius: 100px; }
 
-footer { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100vw; height: 100px; background-color: #000; border: solid 1px #fff; }
+footer { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100vw; height: 100px; z-index: 10; background-color: #000; border: solid 1px #fff; }
 /*# sourceMappingURL=style.css.map */
