--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -2,6 +2,7 @@ footer{
     @include flex(center,center);
     width: 100vw;
     height: 100px;
+    z-index: 10;
     background-color: $color-primary;
     border: solid 1px $color-secondary;
 }
