--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ aside { width: 20%; min-width: 250px; height: calc(100vh - 101px); border: solid
 
 aside::-webkit-scrollbar { width: 15px; }
 
-aside::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 100px; }
+aside::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 0; }
 
 aside::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); background-color: #818181; border: 3px solid #e4e4e4; border-radius: 100px; }
 
@@ -45,7 +45,7 @@ aside::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0,
   .left-sidebar:hover article { display: block; }
   .left-sidebar:hover .container { padding-left: 0px; } }
 
-.container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; border: solid 1px #fff; }
+.container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; width: 100%; border: solid 1px #fff; }
 
 nav { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100%; min-height: 80px; border: solid 1px #fff; }
 
@@ -53,7 +53,7 @@ main { width: 100%; height: 100%; border: solid 1px #fff; padding: 15px 10px; ov
 
 main::-webkit-scrollbar { width: 15px; }
 
-main::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 100px; }
+main::-webkit-scrollbar-track { background-color: #e4e4e4; border-radius: 0; }
 
 main::-webkit-scrollbar-thumb { -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); background-color: #818181; border: 3px solid #e4e4e4; border-radius: 100px; }
 
