--- a/assets/sass/utils/_mixins.scss
+++ b/assets/sass/utils/_mixins.scss
@@ -42,12 +42,12 @@
     }
     #{$section-class}::-webkit-scrollbar-track {
         background-color: $track-color;
-        border-radius: $radius;
+        border-radius: 0;
     }
     #{$section-class}::-webkit-scrollbar-thumb {
         box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
         background-color: $thumb-color;
 		border: 3px solid $track-color;
-        border-radius: $radius
+        border-radius: $radius;
     }
 }
