--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -4,5 +4,5 @@ footer{
     height: 100px;
     z-index: 10;
     background-color: $color-primary;
-    border: solid 1px $color-secondary;
+    border-top: solid 1px $color-secondary;
 }
