--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -1,7 +1,7 @@
 main{
     width: 100%;
     height: 100%;
-    border: solid 1px $color-secondary;
+    // border: solid 1px $color-secondary;
     padding: 15px 10px;
     overflow-y: auto;
 }
